# creatives_analysis

./: .gitignore  AGENTS.md  NOTICE.md  README.md  index.html  pyproject.toml
docs/superpowers/plans/: 2026-05-28-core-understanding-html-distillation.md
outputs/ad1/evidence/: evidence_packet.json  manifest.json  ocr.json
outputs/ad1/reports/: deconstruct.html  deconstruct.json
prompts/adaptation/: submagic_variants.md
prompts/core/: system.md
prompts/deconstruction/: deconstruct_report.md
prompts/extraction/: evidence_packet.md
prompts/reporting/: html_deconstruction_report.md
prompts/synthesis/: pattern_library.md
prompts/validation/: judge.md
research/: creative_deconstruction_best_practices.md  deconstruction_adaptation_pipeline.md  html_report_template_guidelines.md  submagic_product_research.md  submagic_report_brand_kit.md
rubrics/: platform_fit_rubric.md  short_form_creative_rubric.md  submagic_adaptation_rubric.md
schemas/: adaptation_variant.schema.json  deconstruct_report.schema.json  evidence_packet.schema.json  validation_result.schema.json  video_manifest.schema.json
src/creatives_analysis/: __init__.py  cli.py  doctor.py  extraction.py  html_report.py  inventory.py  models.py  validation.py
templates/html/: README.md  deconstruction_report.template.html
tests/: helpers.py  test_extraction_contract.py  test_html_report.py  test_inventory.py  test_validate.py
tests/fixtures/: adaptation_variant.sample.json  deconstruct_report.sample.json  evidence_packet.sample.json  validation_result.sample.json  video_manifest.sample.json
(+20 files in other folders)
